[tool.poetry]
name = "testing"
version = "0.1.0"
description = "Generate and execute tests of Medicaid eligibility systems"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
PyYAML = "^6.0.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
